# Copyright 2022 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

shared_dependencies = [
    "@maven//:com_google_guava_guava",
    "@maven//:io_grpc_grpc_alts",
    "@maven//:io_grpc_grpc_api",
    "@maven//:io_grpc_grpc_auth",
    "@maven//:io_grpc_grpc_context",
    "@maven//:io_grpc_grpc_core",
    "@maven//:io_grpc_grpc_grpclb",
    "@maven//:io_grpc_grpc_netty",
    "@maven//:io_grpc_grpc_netty_shaded",
    "@maven//:io_grpc_grpc_protobuf",
    "@maven//:io_grpc_grpc_services",
    "@maven//:io_grpc_grpc_stub",
] + [
    "//:lombok",
    "//120-ng-manager/contracts/openapi/v1:ng-manager-server-spec-module",
    "//120-ng-manager/modules/ldap:module",
    "//120-ng-manager/modules/ldap/contracts:module",
    "//120-ng-manager/modules/ng-settings:module",
    "//120-ng-manager/modules/ng-settings/contracts:module",
    "//120-ng-manager/modules/ng-variables:module",
    "//120-ng-manager/modules/ng-variables/contracts:module",
    "//120-ng-manager/modules/favorites/contracts/src/main/java/io/harness/favorites:module",
    "//120-ng-manager/modules/favorites/src/main/java/io/harness/favorites/entities:module",
    "//120-ng-manager/modules/favorites/src/main/java/io/harness/favorites/remote:module",
    "//120-ng-manager/modules/favorites/src/main/java/io/harness/favorites/services:module",
    "//120-ng-manager/modules/favorites/src/main/java/io/harness/favorites/services/impl:module",
    "//120-ng-manager/modules/favorites/src/main/java/io/harness/favorites/utils:module",
    "//120-ng-manager/modules/favorites/src/main/java/io/harness/repositories/favorites/spring:module",
    "//120-ng-manager/modules/ip-allowlist:module",
    "//120-ng-manager/modules/ip-allowlist/contracts:module",
    "//120-ng-manager/src/main/java/io/harness/ng/scim/resource:module",
    "//120-ng-manager/src/main/java/io/harness/ng/scim:module",
    "//120-ng-manager/src/main/java/io/harness/utils/featureflaghelper:module",
    "//122-ng-authentication-settings:module",
    "//clients/resource-group:module",
    "//123-ng-core-user:module",
    "//125-cd-nextgen/modules/common/core/src/main/java/io/harness/enforcement/executions:module",
    "//125-cd-nextgen:module",
    "//125-freeze:module",
    "//126-instance:module",
    "//136-git-sync-manager:module",
    "//295-cdng-contracts:module",
    "//pipeline-service/modules/pms-contracts:module",
    "//920-ng-signup:module",
    "//925-enforcement-service:module",
    "//930-ng-license-manager:module",
    "//937-persistence-tracer:module",
    "//940-primary-version-manager:module",
    "//942-enforcement-sdk:module",
    "//947-scim-core:module",
    "//950-ng-core:module",
    "//950-opa-client:module",
    "//950-telemetry:module",
    "//955-filters-sdk:module",
    "//958-debezium-utils:module",
    "//958-migration-sdk:module",
    "//958-ng-file-service-sdk:module",
    "//959-psql-database-models:module",
    "//960-watcher:module",
    "//965-api-key-filter:module",
    "//clients/access-control/admin-client:module",
    "//clients/chaos:module",
    "//clients/servicediscovery:module",
    "//clients/ngsettings:module",
    "//product/ci/scm/proto:ciscm_java_proto",
    "@maven//:net_rcarz_jira_client",
    "@maven//:aopalliance_aopalliance",
    "@maven//:cglib_cglib_nodep",
    "@maven//:ch_qos_logback_contrib_logback_jackson",
    "@maven//:ch_qos_logback_contrib_logback_json_classic",
    "@maven//:ch_qos_logback_contrib_logback_json_core",
    "@maven//:ch_qos_logback_logback_access",
    "@maven//:ch_qos_logback_logback_classic",
    "@maven//:ch_qos_logback_logback_core",
    "@maven//:org_jooq_jooq",
    "@maven//:com_amazonaws_aws_java_sdk_applicationautoscaling",
    "@maven//:com_amazonaws_aws_java_sdk_autoscaling",
    "@maven//:com_amazonaws_aws_java_sdk_cloudformation",
    "@maven//:com_amazonaws_aws_java_sdk_cloudwatch",
    "@maven//:com_amazonaws_aws_java_sdk_codedeploy",
    "@maven//:com_amazonaws_aws_java_sdk_core",
    "@maven//:com_amazonaws_aws_java_sdk_costandusagereport",
    "@maven//:com_amazonaws_aws_java_sdk_ec2",
    "@maven//:com_amazonaws_aws_java_sdk_ecr",
    "@maven//:com_amazonaws_aws_java_sdk_ecs",
    "@maven//:com_amazonaws_aws_java_sdk_eks",
    "@maven//:com_amazonaws_aws_java_sdk_elasticloadbalancing",
    "@maven//:com_amazonaws_aws_java_sdk_elasticloadbalancingv2",
    "@maven//:com_amazonaws_aws_java_sdk_iam",
    "@maven//:com_amazonaws_aws_java_sdk_kms",
    "@maven//:com_amazonaws_aws_java_sdk_lambda",
    "@maven//:com_amazonaws_aws_java_sdk_marketplaceentitlement",
    "@maven//:com_amazonaws_aws_java_sdk_marketplacemeteringservice",
    "@maven//:com_amazonaws_aws_java_sdk_organizations",
    "@maven//:com_amazonaws_aws_java_sdk_route53",
    "@maven//:com_amazonaws_aws_java_sdk_s3",
    "@maven//:com_amazonaws_aws_java_sdk_secretsmanager",
    "@maven//:com_amazonaws_aws_java_sdk_servicediscovery",
    "@maven//:com_amazonaws_aws_java_sdk_sts",
    "@maven//:com_amazonaws_jmespath_java",
    "@maven//:com_auth0_java_jwt",
    "@maven//:com_bettercloud_vault_java_driver",
    "@maven//:com_bugsnag_bugsnag",
    "@maven//:com_carrotsearch_hppc",
    "@maven//:com_coveo_saml_client",
    "@maven//:com_cronutils_cron_utils",
    "@maven//:com_datadoghq_java_dogstatsd_client",
    "@maven//:com_deftlabs_mongo_java_distributed_lock",
    "@maven//:com_eclipsesource_j2v8_j2v8_macosx_x86_64",
    "@maven//:com_esotericsoftware_kryo",
    "@maven//:com_esotericsoftware_minlog",
    "@maven//:com_esotericsoftware_reflectasm",
    "@maven//:com_esotericsoftware_yamlbeans_yamlbeans",
    "@maven//:com_fasterxml_classmate",
    "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    "@maven//:com_fasterxml_jackson_core_jackson_core",
    "@maven//:com_fasterxml_jackson_core_jackson_databind",
    "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_cbor",
    "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_smile",
    "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_xml",
    "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_guava",
    "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jdk8",
    "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_joda",
    "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jsr310",
    "@maven//:com_fasterxml_jackson_jaxrs_jackson_jaxrs_base",
    "@maven//:com_fasterxml_jackson_jaxrs_jackson_jaxrs_json_provider",
    "@maven//:com_fasterxml_jackson_jaxrs_jackson_jaxrs_yaml_provider",
    "@maven//:com_fasterxml_jackson_module_jackson_module_afterburner",
    "@maven//:com_fasterxml_jackson_module_jackson_module_jaxb_annotations",
    "@maven//:com_fasterxml_jackson_module_jackson_module_jsonSchema",
    "@maven//:com_fasterxml_jackson_module_jackson_module_parameter_names",
    "@maven//:com_fasterxml_uuid_java_uuid_generator",
    "@maven//:com_fasterxml_woodstox_woodstox_core",
    "@maven//:com_github_ben_manes_caffeine_caffeine",
    "@maven//:com_github_ben_manes_caffeine_jcache",
    "@maven//:com_github_dikhan_pagerduty_client",
    "@maven//:com_github_dirkraft_dropwizard_file_assets_dropwizard_file_assets",
    "@maven//:com_github_fge_json_schema_core",
    "@maven//:com_github_heremaps_oksse",
    "@maven//:com_github_mifmif_generex",
    "@maven//:com_github_reinert_jjschema",
    "@maven//:com_github_scribejava_scribejava_apis",
    "@maven//:com_github_scribejava_scribejava_core",
    "@maven//:com_github_spullara_mustache_java_compiler",
    "@maven//:com_github_stephenc_jcip_jcip_annotations",
    "@maven//:com_github_vladimir_bukhtoyarov_bucket4j_core",
    "@maven//:com_github_zafarkhaja_java_semver",
    "@maven//:com_google_android_annotations",
    "@maven//:com_google_api_api_common",
    "@maven//:com_google_api_client_google_api_client",
    "@maven//:com_google_api_gax",
    "@maven//:com_google_api_gax_grpc",
    "@maven//:com_google_api_gax_httpjson",
    "@maven//:com_google_api_grpc_proto_google_cloud_datastore_v1",
    "@maven//:com_google_api_grpc_proto_google_cloud_iamcredentials_v1",
    "@maven//:com_google_api_grpc_proto_google_cloud_kms_v1",
    "@maven//:com_google_api_grpc_proto_google_cloud_logging_v2",
    "@maven//:com_google_api_grpc_proto_google_cloud_pubsub_v1",
    "@maven//:com_google_api_grpc_proto_google_common_protos",
    "@maven//:com_google_api_grpc_proto_google_iam_v1",
    "@maven//:com_google_apis_google_api_services_bigquery",
    "@maven//:com_google_apis_google_api_services_cloudbilling",
    "@maven//:com_google_apis_google_api_services_cloudcommerceprocurement",
    "@maven//:com_google_apis_google_api_services_cloudresourcemanager",
    "@maven//:com_google_apis_google_api_services_compute",
    "@maven//:com_google_apis_google_api_services_container",
    "@maven//:com_google_apis_google_api_services_iam",
    "@maven//:com_google_apis_google_api_services_logging",
    "@maven//:com_google_apis_google_api_services_monitoring",
    "@maven//:com_google_apis_google_api_services_servicecontrol",
    "@maven//:com_google_apis_google_api_services_storage",
    "@maven//:com_google_auth_google_auth_library_credentials",
    "@maven//:com_google_auth_google_auth_library_oauth2_http",
    "@maven//:com_google_auto_service_auto_service",
    "@maven//:com_google_auto_value_auto_value_annotations",
    "@maven//:com_google_cloud_datastore_datastore_v1_proto_client",
    "@maven//:com_google_cloud_google_cloud_bigquery",
    "@maven//:com_google_cloud_google_cloud_core",
    "@maven//:com_google_cloud_google_cloud_core_grpc",
    "@maven//:com_google_cloud_google_cloud_core_http",
    "@maven//:com_google_cloud_google_cloud_datastore",
    "@maven//:com_google_cloud_google_cloud_iamcredentials",
    "@maven//:com_google_cloud_google_cloud_kms",
    "@maven//:com_google_cloud_google_cloud_logging",
    "@maven//:com_google_cloud_google_cloud_pubsub",
    "@maven//:com_google_cloud_google_cloud_resourcemanager",
    "@maven//:com_google_cloud_google_cloud_storage",
    "@maven//:com_google_code_findbugs_annotations",
    "@maven//:com_google_code_findbugs_jsr305",
    "@maven//:com_google_code_gson_gson",
    "@maven//:com_google_errorprone_error_prone_annotations",
    "@maven//:com_google_http_client_google_http_client",
    "@maven//:com_google_http_client_google_http_client_apache_v2",
    "@maven//:com_google_http_client_google_http_client_appengine",
    "@maven//:com_google_http_client_google_http_client_jackson",
    "@maven//:com_google_http_client_google_http_client_jackson2",
    "@maven//:com_google_http_client_google_http_client_protobuf",
    "@maven//:com_google_inject_extensions_guice_assistedinject",
    "@maven//:com_google_inject_extensions_guice_multibindings",
    "@maven//:com_google_inject_guice",
    "@maven//:com_google_j2objc_j2objc_annotations",
    "@maven//:com_google_oauth_client_google_oauth_client",
    "@maven//:com_google_protobuf_protobuf_java",
    "@maven//:com_google_protobuf_protobuf_java_util",
    "@maven//:com_googlecode_javaewah_JavaEWAH",
    "@maven//:com_graphql_java_graphql_java",
    "@maven//:com_graphql_java_java_dataloader",
    "@maven//:com_healthmarketscience_sqlbuilder_sqlbuilder",
    "@maven//:com_hierynomus_asn_one",
    "@maven//:com_hierynomus_smbj",
    "@maven//:com_hierynomus_sshj",
    "@maven//:com_intellij_annotations",
    "@maven//:com_j256_two_factor_auth_two_factor_auth",
    "@maven//:com_jakewharton_retrofit_retrofit1_okhttp3_client",
    "@maven//:com_jayway_jsonpath_json_path",
    "@maven//:com_jcraft_harness_jsch_0_1_54_harness_patch",
    "@maven//:com_jcraft_jzlib",
    "@maven//:com_lmax_disruptor",
    "@maven//:com_mashape_unirest_unirest_java",
    "@maven//:com_mchange_c3p0",
    "@maven//:com_mchange_mchange_commons_java",
    "@maven//:com_nimbusds_lang_tag",
    "@maven//:com_nimbusds_nimbus_jose_jwt",
    "@maven//:com_nimbusds_oauth2_oidc_sdk",
    "@maven//:com_novemberain_quartz_mongodb",
    "@maven//:com_offbytwo_jenkins_jenkins_client",
    "@maven//:com_palominolabs_metrics_metrics_guice",
    "@maven//:com_segment_analytics_java_analytics",
    "@maven//:com_segment_analytics_java_analytics_core",
    "@maven//:com_segment_backo_backo",
    "@maven//:com_splunk_splunk",
    "@maven//:com_squareup_okhttp3_logging_interceptor",
    "@maven//:com_squareup_okhttp3_okhttp",
    "@maven//:com_squareup_okhttp3_okhttp_urlconnection",
    "@maven//:com_squareup_okio_okio",
    "@maven//:com_squareup_retrofit2_adapter_rxjava",
    "@maven//:com_squareup_retrofit2_converter_gson",
    "@maven//:com_squareup_retrofit2_converter_jackson",
    "@maven//:com_squareup_retrofit2_converter_jaxb",
    "@maven//:com_squareup_retrofit2_retrofit",
    "@maven//:com_squareup_retrofit_retrofit",
    "@maven//:com_squareup_wire_wire_runtime",
    "@maven//:com_sumologic_api_client_sumo_java_client",
    "@maven//:com_sun_istack_istack_commons_runtime",
    "@maven//:com_sun_mail_javax_mail",
    "@maven//:com_sun_xml_fastinfoset_FastInfoset",
    "@maven//:com_sun_xml_messaging_saaj_saaj_impl",
    "@maven//:com_tdunning_t_digest",
    "@maven//:com_thoughtworks_proxytoys_proxytoys",
    "@maven//:com_typesafe_config",
    "@maven//:com_zaxxer_HikariCP_java7",
    "@maven//:commons_beanutils_commons_beanutils",
    "@maven//:commons_cli_commons_cli",
    "@maven//:commons_codec_commons_codec",
    "@maven//:commons_collections_commons_collections",
    "@maven//:commons_dbcp_commons_dbcp",
    "@maven//:commons_digester_commons_digester",
    "@maven//:commons_io_commons_io",
    "@maven//:commons_lang_commons_lang",
    "@maven//:commons_logging_commons_logging",
    "@maven//:commons_net_commons_net",
    "@maven//:commons_pool_commons_pool",
    "@maven//:commons_validator_commons_validator",
    "@maven//:de_danielbechler_java_object_diff",
    "@maven//:de_javakaffee_kryo_serializers",
    "@maven//:de_jkeylockmanager_jkeylockmanager",
    "@maven//:dk_brics_automaton_automaton",
    "@maven//:dnsjava_dnsjava",
    "@maven//:es_moki_ratelimitj_ratelimitj_core",
    "@maven//:es_moki_ratelimitj_ratelimitj_inmemory",
    "@maven//:guru_nidi_com_kitfox_svgSalamander",
    "@maven//:guru_nidi_graphviz_java",
    "@maven//:guru_nidi_graphviz_rough",
    "@maven//:io_cloudsoft_windows_winrm4j",
    "@maven//:io_cloudsoft_windows_winrm4j_client",
    "@maven//:io_dropwizard_bundles_dropwizard_configurable_assets_bundle",
    "@maven//:io_dropwizard_dropwizard_assets",
    "@maven//:io_dropwizard_dropwizard_auth",
    "@maven//:io_dropwizard_dropwizard_configuration",
    "@maven//:io_dropwizard_dropwizard_core",
    "@maven//:io_dropwizard_dropwizard_http2",
    "@maven//:io_dropwizard_dropwizard_jackson",
    "@maven//:io_dropwizard_dropwizard_jersey",
    "@maven//:io_dropwizard_dropwizard_jetty",
    "@maven//:io_dropwizard_dropwizard_lifecycle",
    "@maven//:io_dropwizard_dropwizard_logging",
    "@maven//:io_dropwizard_dropwizard_metrics",
    "@maven//:io_dropwizard_dropwizard_metrics_graphite",
    "@maven//:io_dropwizard_dropwizard_request_logging",
    "@maven//:io_dropwizard_dropwizard_servlets",
    "@maven//:io_dropwizard_dropwizard_util",
    "@maven//:io_dropwizard_dropwizard_validation",
    "@maven//:io_dropwizard_dropwizard_views",
    "@maven//:io_dropwizard_dropwizard_views_freemarker",
    "@maven//:io_dropwizard_dropwizard_views_mustache",
    "@maven//:io_dropwizard_metrics_metrics_annotation",
    "@maven//:io_dropwizard_metrics_metrics_core",
    "@maven//:io_dropwizard_metrics_metrics_graphite",
    "@maven//:io_dropwizard_metrics_metrics_healthchecks",
    "@maven//:io_dropwizard_metrics_metrics_jersey2",
    "@maven//:io_dropwizard_metrics_metrics_jetty9",
    "@maven//:io_dropwizard_metrics_metrics_json",
    "@maven//:io_dropwizard_metrics_metrics_jvm",
    "@maven//:io_dropwizard_metrics_metrics_logback",
    "@maven//:io_dropwizard_metrics_metrics_servlets",
    "@maven//:io_fabric8_fabric8_utils",
    "@maven//:io_fabric8_kubernetes_client",
    "@maven//:io_fabric8_kubernetes_client_project",
    "@maven//:io_fabric8_openshift_client",
    "@maven//:io_fabric8_zjsonpatch",
    "@maven//:io_github_resilience4j_resilience4j_circuitbreaker",
    "@maven//:io_github_resilience4j_resilience4j_core",
    "@maven//:io_github_resilience4j_resilience4j_ratelimiter",
    "@maven//:io_github_resilience4j_resilience4j_retrofit",
    "@maven//:io_github_resilience4j_resilience4j_retry",
    "@maven//:io_gsonfire_gson_fire",
    "@maven//:io_jsonwebtoken_jjwt",
    "@maven//:io_kubernetes_client_java",
    "@maven//:io_kubernetes_client_java_api",
    "@maven//:io_kubernetes_client_java_api_fluent",
    "@maven//:io_kubernetes_client_java_extended",
    "@maven//:io_kubernetes_client_java_proto",
    "@maven//:io_netty_netty_all",
    "@maven//:io_netty_netty_buffer",
    "@maven//:io_netty_netty_codec",
    "@maven//:io_netty_netty_codec_http",
    "@maven//:io_netty_netty_codec_http2",
    "@maven//:io_netty_netty_codec_socks",
    "@maven//:io_netty_netty_common",
    "@maven//:io_netty_netty_handler",
    "@maven//:io_netty_netty_handler_proxy",
    "@maven//:io_netty_netty_resolver",
    "@maven//:io_netty_netty_transport",
    "@maven//:io_netty_netty_transport_native_epoll",
    "@maven//:io_netty_netty_transport_native_unix_common",
    "@maven//:io_opencensus_opencensus_api",
    "@maven//:io_opencensus_opencensus_contrib_http_util",
    "@maven//:io_opencensus_opencensus_impl",
    "@maven//:io_opencensus_opencensus_exporter_stats_stackdriver",
    "@maven//:io_perfmark_perfmark_api",
    "@maven//:io_projectreactor_netty_reactor_netty",
    "@maven//:io_projectreactor_reactor_core",
    "@maven//:io_prometheus_simpleclient",
    "@maven//:io_prometheus_simpleclient_common",
    "@maven//:io_prometheus_simpleclient_dropwizard",
    "@maven//:io_reactivex_rxjava",
    "@maven//:io_reactivex_rxjava2_rxjava",
    "@maven//:io_sundr_builder_annotations",
    "@maven//:io_sundr_resourcecify_annotations",
    "@maven//:io_sundr_sundr_codegen",
    "@maven//:io_sundr_sundr_core",
    "@maven//:io_vavr_vavr",
    "@maven//:io_vavr_vavr_match",
    "@maven//:jakarta_activation_jakarta_activation_api",
    "@maven//:jakarta_xml_bind_jakarta_xml_bind_api",
    "@maven//:javax_activation_activation",
    "@maven//:javax_annotation_javax_annotation_api",
    "@maven//:javax_cache_cache_api",
    "@maven//:javax_inject_javax_inject",
    "@maven//:javax_servlet_javax_servlet_api",
    "@maven//:javax_validation_validation_api",
    "@maven//:javax_ws_rs_javax_ws_rs_api",
    "@maven//:javax_xml_bind_jaxb_api",
    "@maven//:javax_xml_soap_javax_xml_soap_api",
    "@maven//:javax_xml_ws_jaxws_api",
    "@maven//:jaxen_jaxen",
    "@maven//:joda_time_joda_time",
    "@maven//:net_arnx_nashorn_promise",
    "@maven//:net_bytebuddy_byte_buddy",
    "@maven//:net_engio_mbassador",
    "@maven//:net_i2p_crypto_eddsa",
    "@maven//:net_java_dev_jna_jna",
    "@maven//:net_java_dev_jna_jna_platform",
    "@maven//:net_jcip_jcip_annotations",
    "@maven//:net_jodah_expiringmap",
    "@maven//:net_jodah_failsafe",
    "@maven//:net_minidev_accessors_smart",
    "@maven//:net_minidev_json_smart",
    "@maven//:net_openhft_affinity",
    "@maven//:net_openhft_chronicle_bytes",
    "@maven//:net_openhft_chronicle_core",
    "@maven//:net_openhft_chronicle_queue",
    "@maven//:net_openhft_chronicle_threads",
    "@maven//:net_openhft_chronicle_wire",
    "@maven//:net_redhogs_cronparser_cron_parser",
    "@maven//:net_sf_ezmorph_ezmorph",
    "@maven//:net_sf_jopt_simple_jopt_simple",
    "@maven//:net_sf_json_lib_json_lib",
    "@maven//:net_sf_opencsv_opencsv",
    "@maven//:net_shibboleth_utilities_java_support",
    "@maven//:net_sourceforge_argparse4j_argparse4j",
    "@maven//:org_antlr_antlr4_runtime",
    "@maven//:org_apache_commons_commons_collections4",
    "@maven//:org_apache_commons_commons_compress",
    "@maven//:org_apache_commons_commons_csv",
    "@maven//:org_apache_commons_commons_email",
    "@maven//:org_apache_commons_commons_exec",
    "@maven//:org_apache_commons_commons_jexl3",
    "@maven//:org_apache_commons_commons_lang3",
    "@maven//:org_apache_commons_commons_math3",
    "@maven//:org_apache_commons_commons_text",
    "@maven//:org_apache_cxf_cxf_core",
    "@maven//:org_apache_cxf_cxf_rt_bindings_soap",
    "@maven//:org_apache_cxf_cxf_rt_bindings_xml",
    "@maven//:org_apache_cxf_cxf_rt_databinding_jaxb",
    "@maven//:org_apache_cxf_cxf_rt_frontend_jaxws",
    "@maven//:org_apache_cxf_cxf_rt_frontend_simple",
    "@maven//:org_apache_cxf_cxf_rt_transports_http",
    "@maven//:org_apache_cxf_cxf_rt_transports_http_hc",
    "@maven//:org_apache_cxf_cxf_rt_ws_addr",
    "@maven//:org_apache_cxf_cxf_rt_ws_policy",
    "@maven//:org_apache_cxf_cxf_rt_wsdl",
    "@maven//:org_apache_geronimo_specs_geronimo_jta_1_1_spec",
    "@maven//:org_apache_geronimo_specs_geronimo_ws_metadata_2_0_spec",
    "@maven//:org_apache_httpcomponents_fluent_hc",
    "@maven//:org_apache_httpcomponents_httpasyncclient",
    "@maven//:org_apache_httpcomponents_httpclient",
    "@maven//:org_apache_httpcomponents_httpcore",
    "@maven//:org_apache_httpcomponents_httpcore_nio",
    "@maven//:org_apache_httpcomponents_httpmime",
    "@maven//:org_mybatis_mybatis",
    "@maven//:org_apache_logging_log4j_log4j_api",
    "@maven//:org_apache_logging_log4j_log4j_to_slf4j",
    "@maven//:org_apache_lucene_lucene_analyzers_common",
    "@maven//:org_apache_lucene_lucene_backward_codecs",
    "@maven//:org_apache_lucene_lucene_core",
    "@maven//:org_apache_lucene_lucene_grouping",
    "@maven//:org_apache_lucene_lucene_highlighter",
    "@maven//:org_apache_lucene_lucene_join",
    "@maven//:org_apache_lucene_lucene_memory",
    "@maven//:org_apache_lucene_lucene_misc",
    "@maven//:org_apache_lucene_lucene_queries",
    "@maven//:org_apache_lucene_lucene_queryparser",
    "@maven//:org_apache_lucene_lucene_sandbox",
    "@maven//:org_apache_lucene_lucene_spatial3d",
    "@maven//:org_apache_lucene_lucene_spatial_extras",
    "@maven//:org_apache_lucene_lucene_suggest",
    "@maven//:org_apache_maven_maven_artifact",
    "@maven//:org_apache_maven_maven_model",
    "@maven//:org_apache_neethi_neethi",
    "@maven//:org_apache_santuario_xmlsec",
    "@maven//:org_apache_sshd_sshd_core",
    "@maven//:org_apache_sshd_sshd_common",
    "@maven//:org_apache_sshd_sshd_scp",
    "@maven//:org_apache_ws_xmlschema_xmlschema_core",
    "@maven//:org_atmosphere_atmosphere_runtime",
    "@maven//:org_atteo_evo_inflector",
    "@maven//:org_bitbucket_b_c_jose4j",
    "@maven//:org_bouncycastle_bcpg_jdk15on",
    "@maven//:org_bouncycastle_bcpkix_jdk15on",
    "@maven//:org_bouncycastle_bcprov_ext_jdk15on",
    "@maven//:org_bouncycastle_bcprov_jdk15on",
    "@maven//:org_checkerframework_checker_compat_qual",
    "@maven//:org_checkerframework_checker_qual",
    "@maven//:org_clojure_clojure",
    "@maven//:org_clojure_core_specs_alpha",
    "@maven//:org_clojure_spec_alpha",
    "@maven//:org_cloudfoundry_cloudfoundry_client",
    "@maven//:org_cloudfoundry_cloudfoundry_client_reactor",
    "@maven//:org_cloudfoundry_cloudfoundry_operations",
    "@maven//:org_cloudfoundry_cloudfoundry_util",
    "@maven//:org_codehaus_groovy_groovy",
    "@maven//:org_codehaus_jackson_jackson_core_asl",
    "@maven//:org_codehaus_janino_commons_compiler",
    "@maven//:org_codehaus_janino_janino",
    "@maven//:org_codehaus_mojo_animal_sniffer_annotations",
    "@maven//:org_codehaus_plexus_plexus_utils",
    "@maven//:org_codehaus_woodstox_stax2_api",
    "@maven//:org_conscrypt_conscrypt_openjdk_uber",
    "@maven//:org_coursera_metrics_datadog",
    "@maven//:org_cryptacular_cryptacular",
    "@maven//:org_eclipse_jetty_http2_http2_common",
    "@maven//:org_eclipse_jetty_http2_http2_hpack",
    "@maven//:org_eclipse_jetty_http2_http2_server",
    "@maven//:org_eclipse_jetty_jetty_alpn_server",
    "@maven//:org_eclipse_jetty_jetty_continuation",
    "@maven//:org_eclipse_jetty_jetty_http",
    "@maven//:org_eclipse_jetty_jetty_io",
    "@maven//:org_eclipse_jetty_jetty_security",
    "@maven//:org_eclipse_jetty_jetty_server",
    "@maven//:org_eclipse_jetty_jetty_servlet",
    "@maven//:org_eclipse_jetty_jetty_servlets",
    "@maven//:org_eclipse_jetty_jetty_util",
    "@maven//:org_eclipse_jetty_jetty_webapp",
    "@maven//:org_eclipse_jetty_jetty_xml",
    "@maven//:org_eclipse_jetty_toolchain_setuid_jetty_setuid_java",
    "@maven//:org_eclipse_jetty_websocket_websocket_api",
    "@maven//:org_eclipse_jetty_websocket_websocket_client",
    "@maven//:org_eclipse_jetty_websocket_websocket_common",
    "@maven//:org_eclipse_jetty_websocket_websocket_server",
    "@maven//:org_eclipse_jetty_websocket_websocket_servlet",
    "@maven//:org_eclipse_jgit_org_eclipse_jgit",
    "@maven//:org_eclipse_jgit_org_eclipse_jgit_http_apache",
    "@maven//:org_eclipse_jgit_org_eclipse_jgit_ssh_jsch",
    "@maven//:org_elasticsearch_client_elasticsearch_rest_client",
    "@maven//:org_elasticsearch_client_elasticsearch_rest_high_level_client",
    "@maven//:org_elasticsearch_elasticsearch",
    "@maven//:org_elasticsearch_elasticsearch_cli",
    "@maven//:org_elasticsearch_elasticsearch_core",
    "@maven//:org_elasticsearch_elasticsearch_geo",
    "@maven//:org_elasticsearch_elasticsearch_secure_sm",
    "@maven//:org_elasticsearch_elasticsearch_x_content",
    "@maven//:org_elasticsearch_jna",
    "@maven//:org_elasticsearch_plugin_aggs_matrix_stats_client",
    "@maven//:org_elasticsearch_plugin_lang_mustache_client",
    "@maven//:org_elasticsearch_plugin_mapper_extras_client",
    "@maven//:org_elasticsearch_plugin_parent_join_client",
    "@maven//:org_elasticsearch_plugin_rank_eval_client",
    "@maven//:org_freemarker_freemarker",
    "@maven//:org_glassfish_hk2_external_aopalliance_repackaged",
    "@maven//:org_glassfish_hk2_external_javax_inject",
    "@maven//:org_glassfish_hk2_hk2_api",
    "@maven//:org_glassfish_hk2_hk2_locator",
    "@maven//:org_glassfish_hk2_hk2_utils",
    "@maven//:org_glassfish_hk2_osgi_resource_locator",
    "@maven//:org_glassfish_javax_el",
    "@maven//:org_glassfish_jaxb_jaxb_runtime",
    "@maven//:org_glassfish_jaxb_txw2",
    "@maven//:org_glassfish_jersey_bundles_repackaged_jersey_guava",
    "@maven//:org_glassfish_jersey_containers_jersey_container_servlet",
    "@maven//:org_glassfish_jersey_containers_jersey_container_servlet_core",
    "@maven//:org_glassfish_jersey_core_jersey_client",
    "@maven//:org_glassfish_jersey_core_jersey_common",
    "@maven//:org_glassfish_jersey_core_jersey_server",
    "@maven//:org_glassfish_jersey_ext_jersey_bean_validation",
    "@maven//:org_glassfish_jersey_ext_jersey_metainf_services",
    "@maven//:org_glassfish_jersey_media_jersey_media_jaxb",
    "@maven//:org_glassfish_jersey_media_jersey_media_multipart",
    "@maven//:org_hamcrest_hamcrest_core",
    "@maven//:org_hdrhistogram_HdrHistogram",
    "@maven//:org_hibernate_validator_hibernate_validator",
    "@maven//:org_jacoco_org_jacoco_agent",
    "@maven//:org_jacorb_jacorb_omgapi",
    "@maven//:org_javassist_javassist",
    "@maven//:org_jboss_logging_jboss_logging",
    "@maven//:org_jboss_marshalling_jboss_marshalling",
    "@maven//:org_jboss_marshalling_jboss_marshalling_river",
    "@maven//:org_jboss_spec_javax_rmi_jboss_rmi_api_1_0_spec",
    "@maven//:org_jetbrains_annotations",
    "@maven//:org_jfrog_artifactory_client_artifactory_java_client_api",
    "@maven//:org_jfrog_artifactory_client_artifactory_java_client_httpClient",
    "@maven//:org_jfrog_artifactory_client_artifactory_java_client_services",
    "@maven//:org_joda_joda_convert",
    "@maven//:org_jodd_jodd_bean",
    "@maven//:org_jodd_jodd_core",
    "@maven//:org_jooq_joor",
    "@maven//:org_json_json",
    "@maven//:org_jsr107_ri_cache_annotations_ri_common",
    "@maven//:org_jsr107_ri_cache_annotations_ri_guice",
    "@maven//:org_jvnet_mimepull_mimepull",
    "@maven//:org_jvnet_staxex_stax_ex",
    "@maven//:org_ldaptive_ldaptive",
    "@maven//:org_modelmapper_modelmapper",
    "@maven//:org_mongodb_mongodb_driver_core",
    "@maven//:dev_morphia_morphia_core",
    "@maven//:org_mortbay_jetty_alpn_alpn_boot",
    "@maven//:org_mozilla_rhino",
    "@maven//:org_objenesis_objenesis",
    "@maven//:org_opensaml_opensaml_core",
    "@maven//:org_opensaml_opensaml_messaging_api",
    "@maven//:org_opensaml_opensaml_profile_api",
    "@maven//:org_opensaml_opensaml_saml_api",
    "@maven//:org_opensaml_opensaml_saml_impl",
    "@maven//:org_opensaml_opensaml_security_api",
    "@maven//:org_opensaml_opensaml_security_impl",
    "@maven//:org_opensaml_opensaml_soap_api",
    "@maven//:org_opensaml_opensaml_soap_impl",
    "@maven//:org_opensaml_opensaml_storage_api",
    "@maven//:org_opensaml_opensaml_xmlsec_api",
    "@maven//:org_opensaml_opensaml_xmlsec_impl",
    "@maven//:org_ow2_asm_asm",
    "@maven//:org_ow2_asm_asm_commons",
    "@maven//:org_ow2_asm_asm_tree",
    "@maven//:org_passay_passay",
    "@maven//:org_postgresql_postgresql",
    "@maven//:org_projectlombok_lombok",
    "@maven//:org_quartz_scheduler_quartz",
    "@maven//:org_reactivestreams_reactive_streams",
    "@maven//:org_redisson_redisson",
    "@maven//:org_reflections_reflections",
    "@maven//:org_slf4j_jcl_over_slf4j",
    "@maven//:org_slf4j_jul_to_slf4j",
    "@maven//:org_slf4j_log4j_over_slf4j",
    "@maven//:org_slf4j_slf4j_api",
    "@maven//:org_sonatype_nexus_plugins_nexus_restlet1x_model",
    "@maven//:org_springframework_data_spring_data_commons",
    "@maven//:org_springframework_data_spring_data_mongodb",
    "@maven//:org_springframework_guice_spring_guice",
    "@maven//:org_springframework_security_spring_security_crypto",
    "@maven//:org_springframework_spring_aop",
    "@maven//:org_springframework_spring_beans",
    "@maven//:org_springframework_spring_context",
    "@maven//:org_springframework_spring_core",
    "@maven//:org_springframework_spring_expression",
    "@maven//:org_springframework_spring_jcl",
    "@maven//:org_springframework_spring_tx",
    "@maven//:org_springframework_spring_web",
    "@maven//:org_threeten_threetenbp",
    "@maven//:org_webjars_npm_viz_js_for_graphviz_java",
    "@maven//:org_xmlunit_xmlunit_core",
    "@maven//:org_xmlunit_xmlunit_matchers",
    "@maven//:org_yaml_snakeyaml",
    "@maven//:org_zeroturnaround_zt_exec",
    "@maven//:ru_vyarus_guice_validator",
    "@maven//:software_amazon_ion_ion_java",
    "@maven//:stax_stax",
    "@maven//:stax_stax_api",
    "@maven//:wsdl4j_wsdl4j",
    "@maven//:xerces_xercesImpl",
    "@maven//:xml_apis_xml_apis",
    "@maven//:xml_resolver_xml_resolver",
    "@maven//:xpp3_xpp3",
    "@maven//:io_harness_ff_java_server_sdk",
    "@maven//:io_harness_cv_data_collection_dsl",
    "@maven//:io_swagger_core_v3_swagger_jaxrs2",
    "@maven//:io_swagger_core_v3_swagger_jaxrs2_servlet_initializer_v2",
    "@maven//:io_swagger_core_v3_swagger_core",
    "@maven//:io_swagger_core_v3_swagger_annotations",
    "@maven//:io_swagger_core_v3_swagger_models",
    "@maven//:io_swagger_core_v3_swagger_integration",
]

java_binary(
    name = "module",
    srcs = glob(
        ["src/main/java/**/*.java"],
    ),
    data = ["//:resource"],
    main_class = "io.harness.ng.NextGenApplication",
    resources = [
        "//120-ng-manager/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//120-ng-manager/src/main/resources",
        "@maven//:javax_ws_rs_javax_ws_rs_api",
    ],
    deps = shared_dependencies,
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//120-ng-manager/src/test/resources:resource",
    ],
    resources = [
        "//120-ng-manager/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies + [
        "module",
        "//960-persistence:supporter-test",
        "//980-commons:tests",
        "//990-commons-test:module",
        "@maven//:io_dropwizard_dropwizard_testing",
        "@maven//:io_github_benas_random_beans",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_mockito_mockito_inline",
        "@maven//:org_powermock_powermock_module_junit4",
        "@maven//:org_powermock_powermock_core",
        "@maven//:org_powermock_powermock_api_mockito2",
        "@maven//:pl_pragmatists_JUnitParams",
    ],
)

run_tests()

run_analysis()

exports_files([
    "keystore.jks",
    "config.yml",
])
