load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")
load("//:tools/bazel/macros.bzl", "test_targets_list")

shared_dependencies = [
    "//:lombok",
    "//122-ng-core-user:module",
    "//125-cd-nextgen:module",
    "//948-access-control-admin-client:module",
    "//958-migration-sdk:module",
]

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    resources = [
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

run_analysis()
