load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//:macros.bzl", "test_targets_list")
load("//tools/bazel/pmd:defs.bzl", "pmd")

shared_dependencies = [
    "@maven//:com_google_guava_guava",
] + [
    "//:lombok",
    "//125-cd-nextgen:module",
    "//400-rest:module",
    "//980-commons:module",
    "//970-ng-commons:module",
    "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    "@maven//:com_fasterxml_jackson_core_jackson_core",
    "@maven//:com_fasterxml_jackson_core_jackson_databind",
]

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    resources = [
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

checkstyle()

pmd()
