load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

shared_dependencies = [
    "//:lombok",
    "//125-cd-nextgen:module",
    "//123-ng-core-user:module",
]

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

run_analysis()
