# Copyright 2021 Harness Inc. All rights reserved.
# Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
# that can be found in the licenses directory at the root of this repository, also available at
# https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

shared_dependencies = [
    "//:lombok",
    "//125-cd-nextgen:module",
    "//123-ng-core-user:module",
    "//925-enforcement-service:module",
    "//942-enforcement-sdk:module",
    "//970-ng-commons/src/main/java/io/harness/common:module",
]

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "//:lombok",
        "//960-persistence:module",
        "//960-persistence:supporter-test",
        "//970-ng-commons:module",
        "//980-commons:module",
        "//990-commons-test:module",
        "//999-annotations:module",
        "@maven//:com_google_code_findbugs_annotations",
        "@maven//:com_google_guava_guava",
        "@maven//:com_google_inject_guice",
        "@maven//:dev_morphia_morphia_core",
        "@maven//:junit_junit",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_data_spring_data_commons",
        "@maven//:org_springframework_data_spring_data_mongodb",
        "@maven//:org_springframework_spring_core",
    ],
)

run_tests()

run_analysis()
