load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:macros.bzl", "run_analysis")
load("//:macros.bzl", "test_targets_list")

shared_dependencies = [
    "//:lombok",
    "//125-cd-nextgen:module",
    "//945-ng-audit-client:module",
    "//948-access-control-admin-client:module",
    "//955-outbox-sdk:module",
]

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    resources = [
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

run_analysis()
