load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

shared_dependencies = [
    "//:lombok",
    "//125-cd-nextgen:module",
    "//945-ng-audit-client:module",
    "//948-access-control-admin-client:module",
    "//955-outbox-sdk:module",
    "//925-enforcement-service:module",
    "//942-enforcement-sdk:module",
]

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies,
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//123-ng-core-user/src/test/resources:resource",
    ],
    resources = [
        "//123-ng-core-user/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = shared_dependencies + [
        "module",
        "//960-persistence:supporter-test",
        "//990-commons-test:module",
        "@maven//:io_dropwizard_dropwizard_testing",
        "@maven//:io_github_benas_random_beans",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_powermock_powermock_module_junit4",
        "@maven//:org_powermock_powermock_core",
    ],
)

run_tests()

run_analysis()
