load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//tools/checkstyle:rules.bzl", "checkstyle")
load("//:macros.bzl", "test_targets_list")
load("//tools/bazel/pmd:defs.bzl", "pmd")

java_library(
    name = "module",
    srcs = glob(["src/main/**/*.java"]),
    resources = [
        "//125-cd-nextgen/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//400-rest:module",
        "//440-connector-nextgen:module",
        "//850-execution-plan:module",
        "//850-ng-pipeline-commons:module",
        "//860-orchestration-steps:module",
        "//879-pms-sdk:module",
        "//884-pms-commons:module",
        "//890-sm-core:module",
        "//910-delegate-service-driver:module",
        "//954-connector-beans:module",
        "//955-delegate-beans:module",
        "//980-commons:module",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//125-cd-nextgen/src/test/resources:resource",
    ],
    resources = [
        "//125-cd-nextgen/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "//:lombok",
        "//955-delegate-beans:module",
        "//960-persistence:supporter-test",
        "//990-commons-test:module",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_powermock_powermock_module_junit4",
    ],
)

run_tests()

checkstyle()

pmd()
