load("@rules_java//java:defs.bzl", "java_binary")
load("//:tools/bazel/GenTestRules.bzl", "run_tests")
load("//:tools/bazel/macros.bzl", "run_analysis")

java_library(
    name = "module",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = [
        "//125-cd-nextgen/src/main/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:lombok",
        "//126-instance:module",
        "//127-cd-nextgen-beans:module",
        "//400-rest:module",
        "//440-connector-nextgen:module",
        "//445-gitops:module",
        "//867-polling-contracts:module",
        "//878-pipeline-service-utilities:module",
        "//879-pms-sdk:module",
        "//882-pms-sdk-core:module",
        "//884-pms-commons:module",
        "//888-pms-client:module",
        "//890-sm-core:module",
        "//910-delegate-service-driver:module",
        "//942-enforcement-sdk:module",
        "//945-account-mgmt:module",
        "//945-license-usage-sdk:module",
        "//948-access-control-sdk:module",
        "//954-connector-beans:module",
        "//955-delegate-beans:module",
        "//960-ng-license-usage-beans:module",
        "//970-telemetry-beans:module",
        "//980-commons:module",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:javax_validation_validation_api",
        "@maven//:org_jooq_jooq",
        "@maven//:org_springframework_data_spring_data_commons",
    ],
)

java_library(
    name = "tests",
    testonly = True,
    srcs = glob(["src/test/**/*.java"]),
    data = [
        "//125-cd-nextgen/src/test/resources:resource",
    ],
    resources = [
        "//125-cd-nextgen/src/test/resources:resource",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":module",
        "//:lombok",
        "//942-enforcement-sdk:module",
        "//955-delegate-beans:module",
        "//960-persistence:supporter-test",
        "//990-commons-test:module",
        "@maven//:junit_junit",
        "@maven//:org_assertj_assertj_core",
        "@maven//:org_mockito_mockito_core",
        "@maven//:org_powermock_powermock_api_mockito",
        "@maven//:org_powermock_powermock_module_junit4",
    ],
)

run_tests()

run_analysis()
